--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "talentrah-ai",
+  "name": "talentra",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint-staged": "lint-staged"
+    "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
@@ -43,14 +42,10 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.13",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.0.10",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
-    "eslint-config-prettier": "^10.1.1",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.4.3",
-    "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
