--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -16,6 +16,17 @@ jobs:
         steps:
             - uses : actions/checkout@v3
 
+            - name : Setup pnpm
+              uses: pnpm/action-setup@v2
+              with:
+                version: 8
+        
+            - name : Setup Node.js
+              uses: actions/setup-node@v3
+              with:
+                node-version: '18'
+                cache: 'pnpm'
+            
             - name : Install Vercel CLI
               run : npm install --global vercel@latest
 
