fix: add Vercel CLI installation step to fix deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,9 @@ jobs:
 
       - name: Install Dependencies
         run: pnpm install
+        
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
 
       - name: Pull Vercel Environment Variables
         run: |
