resume-builder-code

--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "talentra",
+  "name": "talentrah",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
