--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
